[package]
name = "dnd_wiki"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
handlebars = "4.0"
num-to-words = "0.1.0"
clap = "3.0.0-beta.2"
once_cell = "1.8.0"
regex = "1.5.4"
percent-encoding = "2.1.0"
fs_extra = "1.2.0"
