[package]
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
categories = ["command-line-utilities"]
description = "a tool for creating wikis for dnd 5e"
edition = "2018"
homepage = "https://github.com/cramt/dnd_wiki"
keywords = ["dnd", "wiki"]
license = "MIT"
name = "dnd_wiki"
readme = "README.md"
repository = "https://github.com/cramt/dnd_wiki"
version = "0.1.4"

exclude = ["/.github", "/.idea", "/.vscode"]

[[bin]]
name = "dnd_wiki"

[dependencies]
clap = "3.0.0-beta.2"
fs_extra = "1.2.0"
handlebars = "4.0"
meval = "0.2"
num-to-words = "0.1.0"
once_cell = "1.8.0"
percent-encoding = "2.1.0"
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
shoulda = "0.1.9"

[workspace]

[package.metadata.binstall]
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "txz"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.xz"
